--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
     "phpunit/phpunit": ">=4.8.9"
   },
   "autoload": {
-    "classmap": ["src"]
+    "psr-4": {
+      "Astrviktor\\Tools\\Url\\": "src/"
+    }
   },
   "minimum-stability": "stable"
 }
